@@ -1,5 +1,5 @@
 LZ4 Library
-Copyright (c) 2011-2014, Yann Collet
+Copyright (c) 2011-2015, Yann Collet
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification,
